@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.8
 
+	- Fluid Code Declarations can now handle
+	  C++ style comments (STR #1383)
 	- Fixed uninitialized data in OS X and WIN32 
 	  timout functions (STR #1374).
 	- Fixed speed issues when measuring text on OS X
